fix: fixed post navbar not being visible on community page

--- a/styles/assets/PostStyles.module.css
+++ b/styles/assets/PostStyles.module.css
@@ -1,7 +1,7 @@
 .posts_wrap {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     height: 100%;
     max-height: 100%;
     width: 100%;
@@ -21,11 +21,11 @@
     display: grid;
     background-color: var(--bg);
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     width: 60vw;
     height: calc( 100vh - 3 * 10vh - 2.6rem - var(--icon-size));
     border-radius: .4rem;
-    border: 2px solid var(--accent)
+    border: 2px solid var(--accent);
 }
 
 .post_border {
