--- a/styles/community/CommunityStyles.module.css
+++ b/styles/community/CommunityStyles.module.css
@@ -55,3 +55,17 @@
     font-family: 'Poppins';
     /* width: clamp( 45ch, 50%, 75ch ) */
 }
+
+.community_posts_wrap {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    margin: auto;
+}
+
+.community_posts_wrap > * {
+    gap: 5rem
+}
